# SeatSync

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  GITHUB_UPLOAD_GUIDE.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: admin.py  auth.py  bookings.py  catalog.py  health.py  payments.py
app/core/: config.py  security.py  time.py
app/db/: session.py
app/models/: __init__.py  booking.py  catalog.py  enums.py  outbox.py  payment.py  user.py
app/repositories/: catalog_repository.py  user_repository.py
app/schemas/: auth.py  booking.py  catalog.py  payment.py
app/services/: auth_service.py  booking_service.py  errors.py  notification_service.py  outbox_service.py  payment_service.py  pricing_service.py  seat_lock_service.py
app/workers/: maintenance.py  outbox_publisher.py
docker/: entrypoint.sh
docs/: api-examples.md  architecture.md  booking-sequence.md  demo-walkthrough.md  interview-guide.md
migrations/: env.py
migrations/versions/: dc35b652b0f9_initial_schema.py
scripts/: demo_race.py  seed.py
tests/: conftest.py  test_admin.py  test_auth.py  test_booking_flow.py  test_payment_idempotency.py
tests/integration/: test_postgres_race.py
web/: index.html
